# Twitcharr

./: .gitignore  LICENSE  README.md  pyproject.toml
dispatcharr_twitch_epg/: README.md  plugin.json  plugin.py  streamlink_setup.py  ttvlol.py  twitch_api.py
docs/: 01-plugin-settings.txt  02-actions.txt  03-channel-grid.txt  04-epg-detail.txt  05-settings-quality.txt  06-health-check.txt  07-discord-notification.txt  08-self-update.txt  README.md
twitcharr/: LICENSE  bandwidth.py  diagnostics.py  epg.py  media_server.py  notifications.py  plugin.json  plugin.py  self_update.py  stream_runner.py  streamlink_setup.py  ttvlol.py  twitch_api.py
