[project]
name = "twitcharr-dev"
version = "1.3.2"
description = "Development and test environment for the Twitcharr Dispatcharr plugin"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"
